--- a/aupost.html
+++ b/aupost.html
@@ -174,7 +174,7 @@
 
         <div class="row">
           <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-            <h3 class="project-section-headings text-center text-md-left col-lg-6 p-0" >
+            <h3 class="project-section-headings text-center text-md-left col-lg-6 p-0">
               The Customer
             </h3>
             <p>
@@ -315,7 +315,7 @@
       </div>
     </section>
 
-    <!--Requirements-->
+    <!--Product & Project Management-->
     <section class="bg_deep_red section-sm-ptb" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
       <div class="container">
         <div class="row align-items-center mb-5">
@@ -326,7 +326,8 @@
               </h3>
               <p class="color__white">
                 Despite a small team, I effectively managed the project, collaborating seamlessly with compliance,
-                quality control, technical teams and manufacturers . I maintained meticulous organization, ensured milestones were met,
+                quality control, technical teams and manufacturers . I maintained meticulous organization, ensured
+                milestones were met,
                 and spearheaded compliance and certification efforts. Additionally, I played a hands-on role in
                 designing the packaging, marketing collateral, and even the phone's boot-up screens.
               </p>
@@ -340,27 +341,19 @@
     </section>
 
 
-    <!--The Solution-->
-    <!--Menu Creation-->
+
+    <!--Packaging Design-->
     <section class="section-sm-ptb">
       <div class="container ">
-        <div class="text-center">
-          <h2 class="bold font__size--40 text__40-1024 text__40-mm project-section-h-p" data-aos="fade-up"
-            data-aos-duration="1000" data-aos-delay="200">The
-            <span class="position-relative path__3"><span class="position-relative z-2">Solution</span></span>
-          </h2>
-        </div>
-
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
             <h3 class="project-section-headings text-center text-md-left p-0">
-              Menu Creation
+              Packaging Design
             </h3>
             <p>
-              I designed and implemented an intuitive menu creation experience, including a novel "selection group"
-              feature for easy customization. This streamlined the process for restaurant owners, saving time and
-              reducing complexity. The menu creation process was designed to accommodate almost any variation of meal,
-              offering unparalleled flexibility to the user.
+              I designed the packaging, creating assets in Illustrator and Photoshop, and then visualized the final
+              product with a 3D mockup in 3ds Max to gain stakeholder approval. Final design aspects, such as gloss,
+              were layered into the file for production and sent to ODM
             </p>
             <a href="#!" class="d-flex align-items-center bold font__size--16 text__16-1024 no-color-change">Coming
               Soon
@@ -369,22 +362,31 @@
           </div>
           <div class="col-lg-6 d-md-flex d-lg-block align-items-center justify-content-center" data-aos="fade-up"
             data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani360-dashboard.png" alt="" />
+            <img src="./assets/images/au_post_die_line.png" alt="" class="shadow-lg rounded-10" />
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-lg-7" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+            <img src="./assets/images/au_post_3d_box.png" alt="" class="shadow-lg rounded-10" />
+          </div>
+          <div class="col-lg-5" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+            <img src="./assets/images/au_post_box.png" alt="" />
           </div>
         </div>
       </div>
     </section>
+    
 
-    <!--Online ordering-->
+    <!--Manual  Screen Savers and Boot up screens-->
     <section class="section-sm-ptb">
       <div class="container ">
         <div class="row">
           <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani-online-ordering.png" alt="" class="" />
+            <img src="./assets/images/au_post_manual.png" alt="" class="" />
           </div>
           <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-            <h3 class="project-section-headings text-center text-md-left col-lg-6 p-0">
-              Online ordering
+            <h3 class="project-section-headings text-center text-md-left p-0">
+              Manual, Screen Savers and Boot up screens
             </h3>
             <p>
               Through UX design and user testing, I crafted a customizable merchant micro-site platform, carefully
@@ -398,104 +400,44 @@
           </div>
           <div class="col-lg-6 d-md-flex d-lg-none align-items-center justify-content-center" data-aos="fade-up"
             data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani-online-ordering.png" alt="" class="">
+            <img src="./assets/images/au_post_manual.png" alt="" class="">
           </div>
-
+        </div>
+        <div class="col-12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+          <img src="./assets/images/au_post_manual_layout.png" alt="" class="shadow-lg rounded-10" />
         </div>
       </div>
     </section>
 
-    <!--Instore ordering-->
 
-    <section class="bg_vibrant_blue " data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
-      <div class="container">
-        <div class="row  mb-5">
-          <div class="col-lg-6">
-            <div>
-              <h3 class="project-section-headings text-center text-md-left p-0 color__white">
-                In store ordering
-              </h3>
-              <p class="color__white">
-                I designed an intuitive in-store ordering system optimized for tablets, catering to both quick-service
-                and seated restaurants. By incorporating features like quick order and pay-by-seat functionality, the
-                features will
-                enhance the customer experience and streamlined operations.
-              </p>
-              <a href="#!" class="d-flex align-items-center bold font__size--16 text__16-1024 color__white">Coming
-                Soon
-                <img src="./assets/images/Arrow 7.png" class="ml-3" alt="" />
-              </a>
-            </div>
-
-          </div>
-          <div class="col-md-7 col-lg-6">
-            <img src="./assets/images/anfanifi-instore-ordering.png" alt="" />
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!--KDS-->
-
-    <section class="section-sm-ptb">
+<!--Outcome-->
+    <section class="section-sm-ptb pt-1">
       <div class="container ">
-        <div class="row">
-          <div class="container mt-5">
-            <div class="row">
-              <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-                <img src="./assets/images/KDS.png" alt="" class="" />
-              </div>
-              <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                <h3 class="project-section-headings text-center text-md-left p-0 ">
-                  Kitchen Display Screen
-                </h3>
-                <p>
-                  I redesigned the kitchen display screen for both tablet and larger displays, optimizing the process
-                  for restaurants to receive and manage orders.
-                </p>
-                <a href="#!" class="d-flex align-items-center bold font__size--16 text__16-1024 no-color-change">Coming
-                  Soon
-                  <img src="./assets/images/Arrow-black.svg" class="ml-3" alt="" />
-                </a>
-              </div>
-              <div class="col-lg-6 d-md-flex d-lg-none align-items-center justify-content-center" data-aos="fade-up"
-                data-aos-duration="1000" data-aos-delay="600">
-                <img src="./assets/images/KDS.png" alt="" class="">
-              </div>
-            </div>
-          </div>
+        <div class="text-center">
+          <h2 class="bold font__size--40 text__40-1024 text__40-mm project-section-h-p" data-aos="fade-up"
+            data-aos-duration="1000" data-aos-delay="200">The
+            <span class="position-relative path__3"><span class="position-relative z-2">Outcome</span></span>
+          </h2>
         </div>
-      </div>
-    </section>
 
-
-    <!--Driver App-->
-    <section class="section-sm-ptb">
-      <div class="container ">
         <div class="row">
-          <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-            <h3 class="project-section-headings text-center text-md-left p-0">
-              Driver App Redesign
+          <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+            <h3 class="project-section-headings text-center text-md-left col-lg-6 p-0">
+              Plus8 Touch 5
             </h3>
             <p>
-              I redesign of the driver app, enhancing the overall user experience and streamlining the order acceptance
-              process. The revamped app also incorporates new features, such as the ability for drivers to accept
-              multiple orders simultaneously, leading to increased efficiency.
+              The Plus 8 Touch 5 launched successfully in Australia, available for purchase on both Australia Post website and Amazon.
             </p>
-            <a href="#!" class="d-flex align-items-center bold font__size--16 text__16-1024 no-color-change">Coming
-              Soon
-              <img src="./assets/images/Arrow-black.svg" class="ml-3" alt="" />
-            </a>
+            </p>
           </div>
-          <div class="col-md-6 col-lg-6 d-md-flex d-lg-block align-items-center justify-content-center"
-            data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/driver_app.png" alt="" />
+          <div class="col-lg-6 d-md-flex d-lg-block align-items-center justify-content-center" data-aos="fade-up"
+            data-aos-duration="1000" data-aos-delay="600">
+            <img src="./assets/images/plus8.svg" alt="" />
           </div>
         </div>
       </div>
     </section>
-
-    <!--Contact me-->
+     <!--Contact me-->
     <section class="p-0">
       <div class="container">
         <div class="wrapper__contat-us position-relative bg__softblue" data-aos="fade-up" data-aos-duration="1000"
