--- a/index.html
+++ b/index.html
@@ -607,8 +607,27 @@
                       </div>
                       <!--Tools logos-->
 
-                      <div class="row  col-md-6 d-flex align-items-start">
-
+                      <div class="row  col-md-6 d-flex justify-content-between justify-content-lg-start">
+                        <div
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          <img src="./assets/images/html_logo.svg" alt="" class=" ">
+                        </div>
+                        <div
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          <img src="./assets/images/css_logo.svg" alt="" class=" ">
+                        </div>
+                        <div
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          <img src="./assets/images/bootstrap_logo.svg" alt="" class=" ">
+                        </div>
+                        <div
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          <img src="./assets/images/python_logo.svg" alt="" class=" ">
+                        </div>
+                        <div
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          <img src="./assets/images/js_logo.svg" alt="" class=" ">
+                        </div>
                         <div
                           class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                           <img src="./assets/images/jira.svg" alt="" class=" ">
@@ -616,6 +635,18 @@
                         <div
                           class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                           <img src="./assets/images/confluence.svg" alt="" class=" ">
+                        </div>
+                        <div
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          <img src="./assets/images/github_v2.svg" alt="" class=" ">
+                        </div>
+                        <div
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          <img src="./assets/images/gitpod.svg" alt="" class=" ">
+                        </div>
+                        <div
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          <img src="./assets/images/heroku.svg" alt="" class=" ">
                         </div>
                         <div
                           class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
