--- a/project.html
+++ b/project.html
@@ -464,8 +464,7 @@
                         Testing
                       </div>
                     </div>
-                    <a href="#!" class="d-flex align-items-center bold font__size--16 text__16-1024 color__white">Coming
-                      Soon
+                    <a href="tasker.html" class="d-flex align-items-center bold font__size--16 text__16-1024 color__white">Find out more
                       <img src="./assets/images/Arrow 7.png" class="ml-3" alt="" />
                     </a>
                   </div>
