--- a/tasker.html
+++ b/tasker.html
@@ -62,10 +62,12 @@
             <div class="col-12 col-lg-9 mb-5 mb-lg-l0 ">
               <h1 class="font__size--65 text__60-1024 text__60-sm text__60-xxs bold my-3" data-aos="fade-right"
                 data-aos-duration="1000" data-aos-delay="200">
-                Restaurant Management
-                <span class="position-relative">SaaS Platform
+
+                <span class="position-relative">TasKer:
                   <img src="./assets/images/Rectangle 5.png" class="path__1" alt="" />
                 </span>
+                Code Institute Capstone Project
+
               </h1>
             </div>
 
@@ -73,26 +75,24 @@
               <div class="content col-12 col-md-6 col-lg-4">
                 <p class="project-detail-heading ">Client</p>
                 <p class="project-detail">
-                  AnfaniFi
+                  Code Institute
                 </p>
               </div>
               <div class="content col-md-6 col-lg-5">
                 <p class="project-detail-heading ">Tasks</p>
                 <p class="project-detail">
-                  Research, Ideation, UX Design, Requirements, Product Management, Project Management, Customer
-                  Onboarding
-                </p>
+                  Ideation, priorotisation, requirements, UX design, development, Testing.
               </div>
               <div class="content col-12 col-md-6 col-lg-4">
                 <p class="project-detail-heading ">Time</p>
                 <p class="project-detail">
-                  Sep 2023 - Mar 2024
+                  Aug 2024
                 </p>
               </div>
               <div class="content col-12 col-md-6 col-lg-5">
                 <p class="project-detail-heading ">Role</p>
                 <p class="project-detail">
-                  Product Management & Business Strategy
+                  Code Institute Student
                 </p>
               </div>
               <div class="content col-12 col-md-6 col-lg-4 align-items-center">
@@ -101,8 +101,32 @@
                 <div
                   class="row d-md-flex align-items-md-center justify-content-md-start justify-content-center flex-wrap ">
                   <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
-                    <img src="./assets/images/jira.svg" alt="" class=" ">
+                    <img src="./assets/images/html_logo.svg" alt="" class=" ">
                   </div>
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/css_logo.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/bootstrap_logo.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/python_logo.svg" alt="" class=" ">
+                  </div>
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/js_logo.svg" alt="" class=" ">
+                  </div>-->
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/github_v2.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/gitpod.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/heroku.svg" alt="" class=" ">
+                  </div>
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/jira.svg" alt="" class=" ">
+                  </div>-->
                   <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/confluence.svg" alt="" class=" ">
                   </div>
@@ -115,21 +139,21 @@
                   <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/visio.svg" alt="" class=" ">
                   </div>-->
-                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/excel.svg" alt="" class=" ">
-                  </div>
-                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  </div>-->
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/power_point.svg" alt="" class=" ">
-                  </div>
+                  </div>-->
                   <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/figma.svg" alt="" class=" ">
                   </div>
                   <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/photoshop.svg" alt="" class=" ">
                   </div>
-                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/illustrator.svg" alt="" class=" ">
-                  </div>
+                  </div>-->
                   <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/3dmax.svg" alt="" class=" ">
                   </div>-->
@@ -138,7 +162,12 @@
               <div class="content col-12 col-md-6 col-lg-5">
                 <p class="project-detail-heading ">Link/s</p>
                 <p class="project-detail">
-                  <a href="https://anfanifinancial.com/" target="_blank" class="no-color-change">anfanifinancial.com</a>
+                  <a href="https://tasker-management-1d7987a02446.herokuapp.com/" target="_blank"
+                    class="no-color-change">TasKer App</a>
+                </p>
+                <p class="project-detail">
+                  <a href="https://github.com/Oakani1/tasker-v2?tab=readme-ov-file" target="_blank"
+                    class="no-color-change">GitHub Repository</a>
                 </p>
               </div>
               <div class="col-md-6 col-lg-4 mb-5">
@@ -171,33 +200,29 @@
             <span class="position-relative path__3"><span class="position-relative z-2">Overview</span></span>
           </h2>
         </div>
-        <h3 class="project-section-headings text-center text-md-left col-lg-6 p-0" data-aos="fade-up"
+        <!--<h3 class="project-section-headings text-center text-md-left col-lg-6 p-0" data-aos="fade-up"
           data-aos-duration="1000" data-aos-delay="200">
           The Customer
-        </h3>
-        <div class="row">
+        </h3>-->
+        <div class="row d-flex align-items-center">
           <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
             <p>
-              AnfaniFI is a platform that connects businesses and individuals across the African supply chain. It
-              empowers businesses to link opportunities with finance. By assessing operational, financial, and
-              behavioral data, AnfaniFI creates a network of trusted partners.
+              I completed my capstone project at Code Institute, where I was challenged to implement CRUD (Create, Read,
+              Update, Delete) functionality using the full range of skills acquired during the boot camp, including CSS,
+              HTML, Bootstrap, and Python.
             </p>
-            <p>AnfaniFI launched Anfani360 in Sierra Leone. Anfani360 is a restaurant solution designed to empower
-              Africa's food service businesses. It offers a variety of features to help restaurants grow their business,
-              including online ordering, a 360 view of operations management, and driver management.
-            </p>
-            
+
           </div>
           <div class="col-lg-6 d-md-flex d-lg-block align-items-center justify-content-center" data-aos="fade-up"
             data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani360_logo.svg" alt="" />
+            <img src="./assets/images/tasker_logo.svg" alt="" class="col-12" />
           </div>
         </div>
       </div>
     </section>
 
     <!--Project Goals-->
-    <section class="bg_vibrant_blue" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
+    <section class="bg_new_purple" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 p-5 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
@@ -209,13 +234,11 @@
                 Project Goals
               </h3>
               <p class="color__white">
-                AnfaniFi's flagship product, Anfani360, was initially built on PHP. Recognizing the need for
-                modernization,
-                the project aimed to transition the codebase to a more current framework, enhancing performance,
-                scalability, and maintainability. The goal was to soft launch in Sierra Leone, focusing on acquiring
-                early
-                users, gathering their invaluable feedback, and creating a data-driven roadmap for future development.
-
+                The assignment aimed to build a full-stack web application that solved a real-world problem.The
+                application effectively manage data, incorporate security features, and was thoroughly tested
+                before deployment to a cloud platform. The Project emphasized the importance of defining
+                the problem, target audience, and core features. The key things I learnt included
+                full-stack development, Agile practices, data modeling, web security, testing, and cloud deployment.
               </p>
             </div>
             <div class="col-md-7 col-lg-6 p-5 d-lg-none">
