--- a/tasker.html
+++ b/tasker.html
@@ -192,8 +192,8 @@
 
 
     <!--Overview-->
-    <section>
-      <div class="container ">
+    <section class="mt-md-5 mb-md-5">
+      <div class="container justify-content-center align-items-center ">
         <div class="text-center">
           <h2 class="bold font__size--40 text__40-1024 text__40-mm project-section-h-p" data-aos="fade-up"
             data-aos-duration="1000" data-aos-delay="200">
@@ -204,7 +204,7 @@
           data-aos-duration="1000" data-aos-delay="200">
           The Customer
         </h3>-->
-        <div class="row d-flex align-items-center">
+        <div class="row d-flex align-items-center ">
           <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
             <p>
               I completed my capstone project at Code Institute, where I was challenged to implement CRUD (Create, Read,
@@ -226,7 +226,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 p-5 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/laptop.svg" alt="" />
+            <img src="./assets/images/tasker_desktop_and_mobile_landing.png" alt="" />
           </div>
           <div class="col-lg-6">
             <div>
@@ -242,7 +242,7 @@
               </p>
             </div>
             <div class="col-md-7 col-lg-6 p-5 d-lg-none">
-              <img src="./assets/images/laptop.svg" alt="" />
+              <img src="./assets/images/tasker_desktop_and_mobile_landing.png" alt="" />
             </div>
           </div>
 
@@ -251,52 +251,10 @@
     </section>
 
 
-    <!--Problem & Solution-->
-    <section class="section-sm-ptb">
-      <div class="container ">
-        <div class="row d-flex justify-content-between">
-          <div class="col-md-6 mb-5">
-            <h3 class="project-section-headings text-center text-md-left  p-0" data-aos="fade-up"
-              data-aos-duration="1000" data-aos-delay="200">
-              Problems
-            </h3>
 
-            <div class="p-0" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-
-              <ol>
-                <li>Limited Flexibility due to Pre-built Solution</li>
-                <li>Monolithic Architecture Hindered Development</li>
-                <li>Outdated Technology Stack</li>
-                <li>Scalability Concerns</li>
-                <li>No payment gateway in Sierra Leone</li>
-                <li>Lack of Direct User Feedback</li>
-                <li>Business operation in Sierra Leone were very manual as businesses lacked digital tools</li>
-              </ol>
-            </div>
-          </div>
-          <div class="col-md-6 mb-5">
-            <h3 class="project-section-headings text-center text-md-left  p-0" data-aos="fade-up"
-              data-aos-duration="1000" data-aos-delay="200">
-              Solution
-            </h3>
-
-            <div class="p-0" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-
-              <ol>
-                <li>Collaborated to define clear project requirements.</li>
-                <li>worked with Dev team to micgrate tech stack for enhanced performance and scalability.</li>
-                <li>Developed an innovative mobile money payment solution.</li>
-                <li>Established feedback mechanisms and conducted user research for continuous improvement.</li>
-                <li>Digitised business operations leading to improved efficieny</li>
-              </ol>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!--The Approach-->
-    <section class="section-sm-ptb pt-1">
+    <section class="section-sm-ptb pt-1 pt-md-5 mt-5">
       <div class="container ">
         <div class="text-center">
           <h2 class="bold font__size--40 text__40-1024 text__40-mm project-section-h-p" data-aos="fade-up"
@@ -308,243 +266,87 @@
         <div class="row">
           <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
             <h3 class="project-section-headings text-center text-md-left col-lg-6 p-0">
-              Research
+              User Story map
             </h3>
             <p>
-              During my time in Sierra Leone, I conducted immersive, on-the-ground research with key stakeholders across
-              the food delivery ecosystem — from consumers and restaurants to delivery companies. Through interviews,
-              observations, and analysis, I uncovered pain points and opportunities for digitization, which informed the
-              development of AnfaniFi's solutions tailored to the unique African context.
+              I decided to prioritize features by listing out potential requirements for a task manager, considering the
+              user personas of those who might need one. I determined that an app focusing on simple task management for
+              people who want to track chores or important dates would be my Minimum Viable Product (MVP).
             </p>
+            <p>
+              I outlined these potential features in a user story map. Then, used the Impact Effort frame work and
+              MOSCOW, I decided which features would be included in the initial release for the MVP, which would come
+              next, and which would be developed later.
             </p>
+
           </div>
           <div class="col-lg-6 d-md-flex d-lg-block align-items-center justify-content-center" data-aos="fade-up"
             data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani_research.png" alt="" />
+            <img src="./assets/images/takser-user_story.png" alt="" class="shadow-lg rounded-10" />
+          </div>
+        </div>
+        <div class="row d-flex justify-content-between">
+          <div class="col-lg-7 d-md-flex d-lg-block align-items-center justify-content-center mt-5" data-aos="fade-up"
+            data-aos-duration="1000" data-aos-delay="600">
+            <img src="./assets/images/tasker_high_level_user_story.png" alt="" class="shadow-lg rounded-10" />
+          </div>
+          <div class="col-lg-5 d-md-flex d-lg-block align-items-center justify-content-center mt-5" data-aos="fade-up"
+            data-aos-duration="1000" data-aos-delay="600">
+            <img src="./assets/images/tasker_impact_effort_table_s.png" alt="" />
           </div>
         </div>
       </div>
     </section>
-    <!--The ideation-->
-    <section class="section-sm-ptb">
+    <!--wireframes-->
+    <section class="section-sm-ptb my-5">
       <div class="container ">
         <div class="row">
           <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani_process.png" alt="" class="shadow-lg rounded-10" />
+            <img src="./assets/images/tasker_landing_hi.png" alt="" />
           </div>
           <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
             <h3 class="project-section-headings text-center text-md-left col-lg-6 p-0">
-              Ideation
+              Design
             </h3>
             <p>
-              I mapped out existing workflows, analyzed pain points, and brainstormed potential improvements alongside
-              key stakeholders. Through collaborative workshops, we refined processes and envisioned a future state
-              where AnfaniFi played a central role in optimizing operations. Crucially, I ensured that all proposed
-              solutions were tightly aligned with our North Star metric, guaranteeing strategic focus and impact
+              Once MVP features were decided, I designed a prototype in Figma, focusing on user flow and core
+              functionalities.
             </p>
 
           </div>
           <div class="col-lg-6 d-md-flex d-lg-none align-items-center justify-content-center" data-aos="fade-up"
             data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani_process.png" alt="" class="shadow-lg rounded-10">
+            <img src="./assets/images/tasker_landing_hi.png" alt="">
           </div>
-
-        </div>
-        <div class="d-md-flex align-items-center justify-content-center mt-5" data-aos="fade-up"
-          data-aos-duration="1000" data-aos-delay="600">
-          <img src="./assets/images/anfani_OST.png" alt="" class="shadow-lg rounded-10">
         </div>
       </div>
     </section>
 
-    <!--Requirements-->
-    <section class="bg_vibrant_blue section-sm-ptb" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
+    <!--Outcome-->
+    <section class="bg_vibrant_blue section-sm-ptb mb-5" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
       <div class="container">
-        <div class="row align-items-center mb-5">
-          <div class="col-lg-6">
+        <div class="row align-items-center mb-5 justify-content-center">
+          <div class="col-lg-6 ">
             <div>
               <h3 class="project-section-headings text-center text-md-left p-0 color__white">
-                Requirements Gathering & Prioritization
+                Development
               </h3>
               <p class="color__white">
-                I spearheaded the requirements gathering process, prioritizing features based on user needs and business
-                goals. I then developed a high-level product roadmap, outlining key milestones and release timelines.
-                Utilizing user story mapping, I collaborated with the development team to break down requirements into
-                epics and user stories, ensuring a clear understanding of scope for each sprint. We aimed for a two-week
-                sprint cadence to maintain agility and responsiveness to feedback.
+               The final product was an App that  allows users to seamlessly create, edit, and
+               delete tasks. I utilizing a technology stack comprised of HTML, CSS, Bootstrap
+                for front-end styling, and Python with the Django framework for back-end functionality. I implemented
+                data models, URLs, and views to facilitate core task management features. 
               </p>
             </div>
           </div>
-          <div class="col-md-7 col-lg-6">
-            <img src="./assets/images/laptop.svg" alt="" />
+          <div class=" col-6 col-md-3 ">
+            <img src="./assets/images/tasker_mobile.png" alt="" />
           </div>
         </div>
-        <div>
-          <img src="./assets/images/user_story.png" alt="" class="shadow-lg rounded-10" />
-        </div>
-        <div class="mt-5">
-          <img src="./assets/images/user_story_hl.png" alt="" class="shadow-lg rounded-10" />
-        </div>
-    </section>
-
-
-    <!--The Solution-->
-    <!--Menu Creation-->
-    <section class="section-sm-ptb">
-      <div class="container ">
-        <div class="text-center">
-          <h2 class="bold font__size--40 text__40-1024 text__40-mm project-section-h-p" data-aos="fade-up"
-            data-aos-duration="1000" data-aos-delay="200">The
-            <span class="position-relative path__3"><span class="position-relative z-2">Solution</span></span>
-          </h2>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-            <h3 class="project-section-headings text-center text-md-left p-0">
-              Menu Creation
-            </h3>
-            <p>
-              I designed and implemented an intuitive menu creation experience, including a novel "selection group"
-              feature for easy customization. This streamlined the process for restaurant owners, saving time and
-              reducing complexity. The menu creation process was designed to accommodate almost any variation of meal,
-              offering unparalleled flexibility to the user.
-            </p>
-            <a href="#!" class="d-flex align-items-center bold font__size--16 text__16-1024 no-color-change">Coming
-              Soon
-              <img src="./assets/images/Arrow-black.svg" class="ml-3" alt="" />
-            </a>
-          </div>
-          <div class="col-lg-6 d-md-flex d-lg-block align-items-center justify-content-center" data-aos="fade-up"
-            data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani360-dashboard.png" alt="" />
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!--Online ordering-->
-    <section class="section-sm-ptb">
-      <div class="container ">
-        <div class="row">
-          <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani-online-ordering.png" alt="" class="" />
-          </div>
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-            <h3 class="project-section-headings text-center text-md-left col-lg-6 p-0">
-              Online ordering
-            </h3>
-            <p>
-              Through UX design and user testing, I crafted a customizable merchant micro-site platform, carefully
-              documenting requirements for the development team. The feature empowers businesses to preserve brand
-              consistency while delivering an intuitive and user-friendly online ordering experience to their customers.
-            </p>
-            <a href="#!" class="d-flex align-items-center bold font__size--16 text__16-1024 no-color-change">Coming
-              Soon
-              <img src="./assets/images/Arrow-black.svg" class="ml-3" alt="" />
-            </a>
-          </div>
-          <div class="col-lg-6 d-md-flex d-lg-none align-items-center justify-content-center" data-aos="fade-up"
-            data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani-online-ordering.png" alt="" class="">
-          </div>
-
-        </div>
-      </div>
-    </section>
-
-    <!--Instore ordering-->
-
-    <section class="bg_vibrant_blue " data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
-      <div class="container">
-        <div class="row  mb-5">
-          <div class="col-lg-6">
-            <div>
-              <h3 class="project-section-headings text-center text-md-left p-0 color__white">
-                In store ordering
-              </h3>
-              <p class="color__white">
-                I designed an intuitive in-store ordering system optimized for tablets, catering to both quick-service
-                and seated restaurants. By incorporating features like quick order and pay-by-seat functionality, the
-                features will
-                enhance the customer experience and streamlined operations.
-              </p>
-              <a href="#!" class="d-flex align-items-center bold font__size--16 text__16-1024 color__white">Coming
-                Soon
-                <img src="./assets/images/Arrow 7.png" class="ml-3" alt="" />
-              </a>
-            </div>
-
-          </div>
-          <div class="col-md-7 col-lg-6">
-            <img src="./assets/images/anfanifi-instore-ordering.png" alt="" />
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!--KDS-->
-
-    <section class="section-sm-ptb">
-      <div class="container ">
-        <div class="row">
-          <div class="container mt-5">
-            <div class="row">
-              <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-                <img src="./assets/images/KDS.png" alt="" class="" />
-              </div>
-              <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                <h3 class="project-section-headings text-center text-md-left p-0 ">
-                  Kitchen Display Screen
-                </h3>
-                <p>
-                  I redesigned the kitchen display screen for both tablet and larger displays, optimizing the process
-                  for restaurants to receive and manage orders.
-                </p>
-                <a href="#!" class="d-flex align-items-center bold font__size--16 text__16-1024 no-color-change">Coming
-                  Soon
-                  <img src="./assets/images/Arrow-black.svg" class="ml-3" alt="" />
-                </a>
-              </div>
-              <div class="col-lg-6 d-md-flex d-lg-none align-items-center justify-content-center" data-aos="fade-up"
-                data-aos-duration="1000" data-aos-delay="600">
-                <img src="./assets/images/KDS.png" alt="" class="">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <!--Driver App-->
-    <section class="section-sm-ptb">
-      <div class="container ">
-        <div class="row">
-          <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-            <h3 class="project-section-headings text-center text-md-left p-0">
-              Driver App Redesign
-            </h3>
-            <p>
-              I redesign of the driver app, enhancing the overall user experience and streamlining the order acceptance
-              process. The revamped app also incorporates new features, such as the ability for drivers to accept
-              multiple orders simultaneously, leading to increased efficiency.
-            </p>
-            <a href="#!" class="d-flex align-items-center bold font__size--16 text__16-1024 no-color-change">Coming
-              Soon
-              <img src="./assets/images/Arrow-black.svg" class="ml-3" alt="" />
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-6 d-md-flex d-lg-block align-items-center justify-content-center"
-            data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/driver_app.png" alt="" />
-          </div>
-        </div>
-      </div>
     </section>
 
     <!--Contact me-->
-    <section class="p-0">
+    <section class="p-0 mt-5">
       <div class="container">
         <div class="wrapper__contat-us position-relative bg__softblue" data-aos="fade-up" data-aos-duration="1000"
           data-aos-delay="200">
